--- a/package.json
+++ b/package.json
@@ -2,35 +2,37 @@
   "name": "truffle-ledger-provider",
   "version": "0.0.4",
   "description": "Ledger Wallet-enabled Web3 provider",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "keywords": [
+    "ethereum",
+    "hardware",
+    "ledger",
+    "provider",
+    "wallet"
+  ],
+  "homepage": "https://github.com/hussy-io/truffle-ledger-provider#readme",
+  "bugs": {
+    "url": "https://github.com/hussy-io/truffle-ledger-provider/issues"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/hussy-io/truffle-ledger-provider.git"
   },
-  "keywords": [
-    "ethereum",
-    "ledger",
-    "hardware",
-    "wallet",
-    "provider"
-  ],
-  "author": "Peter Tulala <peter@hussy.io>",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/hussy-io/truffle-ledger-provider/issues"
+  "author": "Peter Tulala <peter@hussy.io>",
+  "main": "index.js",
+  "scripts": {
+    "lint": "eslint .",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "homepage": "https://github.com/hussy-io/truffle-ledger-provider#readme",
   "dependencies": {
-    "ethereumjs-wallet": "^0.6.0",
-    "web3": "^0.18.2",
-    "web3-provider-engine": "^14.0.5",
-    "@ledgerhq/hw-transport-node-hid": "^4.7.6",
-    "@ledgerhq/web3-subprovider": "^4.7.3"
+    "@ledgerhq/hw-transport-node-hid": "^4.24.0",
+    "@ledgerhq/web3-subprovider": "^4.31.0",
+    "ethereumjs-wallet": "^0.6.2",
+    "web3": "^0.20.6",
+    "web3-provider-engine": "^14.1.0"
   },
   "devDependencies": {
-    "@atomix/eslint-config": "^6.4.0"
+    "@atomix/eslint-config": "^6.4.0",
+    "eslint": "^4.19.0"
   }
 }
