--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
   "dependencies": {
     "@ledgerhq/hw-transport-node-hid": "^4.24.0",
     "@ledgerhq/web3-subprovider": "^4.31.0",
+    "babel-polyfill": "^6.26.0",
     "ethereumjs-wallet": "^0.6.2",
-    "web3": "^0.20.6",
-    "web3-provider-engine": "^14.1.0"
+    "web3-provider-engine": "git+https://github.com/cgewecke/provider-engine.git#be7d1e895918eb05c7893fc00a7053fe4abb4233",
+    "web3-providers-http": "^1.0.0-beta.37"
   },
   "devDependencies": {
     "@atomix/eslint-config": "^6.4.0",
